Projet GL/Projet_GL/src/test/deca/codegen/valid/created/incr2/double-assign.deca
//5 5 3 4

{
    int x;
    int y = x = 5;
    int w;
    int z = (w = 3) + 1;
    print(x); print(" ");
    print(y); print(" ");
    print(w); print(" ");
    print(z);
}