Projet GL/Projet_GL/src/test/deca/codegen/invalid/created/wrongtint.deca
//Description 
//Wrong type cast 
{
    int x = 3.5; 
}